crates/ic-lint/tests/snapshots/duplicate_bounds__duplicate_max_chained_typedefs.snap
---
source: crates/ic-lint/tests/duplicate_bounds.rs
expression: test_lint_hir(source)
---
⨯ duplicate-bounds: @max is already defined on typedef `BaseInt`
  @ test.idl:3:2

 2 │ @max(100) typedef int32 BaseInt;
   │  ˆˆˆ @max already defined on `BaseInt`
 3 │ @max(50) typedef BaseInt MyInt;
   │  ˆˆˆ @max on typedef
 4 │ 
 5 │ struct Foo {

  ? remove @max from one of the typedefs
