crates/ic-lint/tests/snapshots/duplicate_bounds__duplicate_range_on_member_and_typedef.snap
---
source: crates/ic-lint/tests/duplicate_bounds.rs
expression: test_lint_hir(source)
---
⨯ duplicate-bounds: @range is already defined on typedef `MyInt`
  @ test.idl:5:6

 2 │ @range(min = 0, max = 100) typedef int32 MyInt;
   │  ˆˆˆˆˆ @range already defined on `MyInt`
 3 │ 
 4 │ struct Foo {
 5 │     @range(min = 10, max = 50) MyInt value;
   │      ˆˆˆˆˆ @range on member
 6 │ };

  ? remove @range from either the member or the typedef
