crates/ic-lint/tests/snapshots/duplicate_bounds__min_on_member_range_on_typedef.snap
---
source: crates/ic-lint/tests/duplicate_bounds.rs
expression: test_lint_hir(source)
---
⨯ duplicate-bounds: @min conflicts with @range on typedef `MyInt`
  @ test.idl:5:6

 2 │ @range(min = 0, max = 100) typedef int32 MyInt;
   │  ˆˆˆˆˆ conflicting annotation on `MyInt`
 3 │ 
 4 │ struct Foo {
 5 │     @min(10) MyInt value;
   │      ˆˆˆ @min on member
 6 │ };

  ? use either @range or @min/@max, not both
