crates/ic-lint/tests/snapshots/duplicate_bounds__range_on_member_min_on_typedef.snap
---
source: crates/ic-lint/tests/duplicate_bounds.rs
expression: test_lint_hir(source)
---
⨯ duplicate-bounds: @range conflicts with @min or @max on typedef `MyInt`
  @ test.idl:5:6

 2 │ @min(0) typedef int32 MyInt;
   │  ˆˆˆ conflicting annotation on `MyInt`
 3 │ 
 4 │ struct Foo {
 5 │     @range(min = 10, max = 100) MyInt value;
   │      ˆˆˆˆˆ @range on member
 6 │ };

  ? use either @range or @min/@max, not both
