crates/ic-lint/tests/snapshots/duplicate_bounds__range_with_min_same_location.snap
---
source: crates/ic-lint/tests/duplicate_bounds.rs
expression: test_lint_hir(source)
---
⨯ duplicate-bounds: @range cannot be used together with @min
  @ test.idl:3:6

 2 │ struct Foo {
 3 │     @range(min = 0, max = 100)
   │      ˆˆˆˆˆ @range annotation here
 4 │     @min(10)
   │      ˆˆˆ @min annotation here
 5 │     int32 value;
 6 │ };

  ? use either @range or @min/@max, not both
